--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -1,4 +1,13 @@
 {% extends '::base.html.twig' %}
+{% form_theme form _self %}
+
+{% block form_widget_simple %}
+    {% set type = type|default('text') %}
+    <input type="{{ type }}" {{ block('widget_attributes') }} {% if value is not empty %}value="{{ value }}" ng-init="formData.{{ id }}='{{ value }}';" {% endif %} ng-model="formData.{{ id }}" ng-class="{ error: formInputTeg['{{ full_name }}'].$error.required && !formInputTeg.$pristine}"/>
+
+    <span ng-show="!formInputTeg.$pristine && formInputTeg['{{ full_name }}'].$error.required">Este Campo es requerido.</span>
+{% endblock form_widget_simple %}
+
 
 {% block stylesheets %}
     {{ parent() }}
@@ -28,43 +37,11 @@
             <div class="form-group">
                 {{ form_label(form.titulo) }}
                 {{ form_errors(form.titulo) }}
-                <div class="col-xs-9 col-lg-12">
+                <div class="col-xs-9 col-lg-12" >
                     {{ form_widget(form.titulo) }}
-                    <span ng-show="!formInputTeg.$pristine && formInputTeg.biblioteca_tegbundle_teg[publicacion][day].$error.required">Titulo is required.</span>
-
-<div >
-    <div class='form-group'>
-            <label for="name">Name</label>
-            <input type="text" class='form-control' placeholder='name' 
-            name='name' id='name' ng-model='formData.name' required 
-            ng-class='{ error: formInputTeg.name.$invalid && !formInputTeg.$pristine }'>
-            <span ng-show="!formInputTeg.$pristine && formInputTeg.name.$error.required">Name is required.</span>
-          </div>
-          
-          <div class='form-group'>
-            <label for="lastname">Last Name</label>
-            <input type="text" class='form-control' placeholder='last name' 
-            name='lastname' ng-model='formData.lastname' required
-            ng-class='{ error: formInputTeg.lastname.$invalid && !formInputTeg.$pristine }'>
-            <span ng-show='!formInputTeg.$pristine && formInputTeg.lastname.$error.required'>Last name is required</span>
-          </div>
-          
-          <div class='form-group'>
-            <label for="email">Email</label>
-            <input type="email" class='form-control' placeholder='example@email.com' 
-            name='email' ng-model='formData.email' required
-            ng-class='{ error: formInputTeg.email.$invalid && !formInputTeg.$pristine, warning: formInputTeg.email.$error.email }'>
-            <span ng-show='!formInputTeg.$pristine && formInputTeg.email.$error.required'>Email is required</span>
-            <span ng-show='!formInputTeg.$pristine && formInputTeg.email.$error.email'>Please enter a valid email</span>
-          </div>
-          
-          <input type="submit" class='btn btn-success pull-right' 
-          ng-click='submitForm(formData)' ng-disabled='!formInputTeg.$valid'>
-        <br>
-        Form content:
-        <pre>[[formInputTeg]]</pre>
-      </div> 
+                    <!--<span ng-show="!formInputTeg.$pristine && formInputTeg['biblioteca_tegbundle_teg[titulo]'].$error.required">Titulo es requerido.</span>-->
                 </div>
+                {{ form.titulo.vars.name }}
             </div>
 
             <div class="form-group col-lg-6">
@@ -231,8 +208,8 @@
     <script src="{{ asset('js/fileinput.js') }}" type="text/javascript"></script>
     <script src="{{ asset('js/fileinput_locale_es.js') }}" type="text/javascript"></script>
 
-    <script src="{{ asset('js/app/newTeg/newtegModule.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('js/app/newTeg/newtegController.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('js/app/newTeg/newTegModule.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('js/app/newTeg/newTegController.js') }}" type="text/javascript"></script>
     <script src="{{ asset('plugins/ngTagsInput/ng-tags-input.min.js') }}" type="text/javascript"></script>
         
 {% endblock %}
