--- a/src/Biblioteca/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/Security/login.html.twig
@@ -1,13 +1,11 @@
 {% extends 'BibliotecaUserBundle::layout.html.twig' %}
 {% block fos_user_content %}
 {% trans_default_domain 'FOSUserBundle' %}
-{% if error %}
-<span class="hidden" id="fosuserbundle-errors">{{ error|trans }}</span>
-{% endif %}
+
 <div class="container">
     <div class="row vertical-offset-100">
         <div class="col-md-4 col-md-offset-4">
-            <div class="panel panel-default">
+            <div class="panel panel-default {% if error %}has-error{% endif %}">
                 <div class="panel-heading">
                     <h3 class="panel-title">Inicio de Sesión</h3>
                 </div>
@@ -23,6 +21,9 @@
         <label class="sr-only" for="password">{{ 'security.login.password'|trans }}</label>
         <input class="form-control" id="password" name="_password" placeholder="{{ 'security.login.password'|trans }}" required="required" type="password">
     </div>
+    {% if error %}
+    <span class="help-block">{{ error.messageKey|trans(error.messageData, 'security') }}</span>
+    {% endif %}
     <div class="checkbox">
         <label class="text-muted">
             <input id="remember_me" name="_remember_me" type="checkbox" value="on"> {{ 'security.login.remember_me'|trans }}
