--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -83,7 +83,7 @@
         </label>
     {% endif %}
 {% endblock form_label %}
-
+{############################################################################}
 {% block stylesheets %}
     {{ parent() }}
     <link href="{{ asset('plugins/bootstrap-switch/bootstrap-switch.min.css') }}" type="text/css" rel="stylesheet" />
@@ -96,13 +96,15 @@
 {% block body %}
 
     <div ng-controller="newTegController">
-        <h2><a class="btn btn-default" href="{{ path('teg') }}"><i class="fa fa-arrow-left fa-fw"></i>&nbsp;Cancelar</a>&nbsp;Nuevo Trabajo Especial de Grado</h2>
+        <h4 class="alert alert-{% if operacion == 0 %}{{'success'}}
+        {% else %}{{'warning'}}{% endif %}"><a class="btn btn-danger" href="{{ path('teg') }}"><i class="fa fa-arrow-left fa-fw"></i>&nbsp;Cancelar</a>&nbsp;{% if operacion == 0 %}{{'Nuevo'}}
+        {% else %}{{'Edición de'}}{% endif %} Trabajo Especial de Grado</h4>
         {{ form_start(form, { 'name': 'formInputTeg' }) }}
 
             {{ form_errors(form) }}
     <ul class="nav nav-tabs">
         <li class="active"><a data-toggle="tab" href="#paso1">Paso 1</a></li>
-        <li><a ng-data-toggle="tab" href="#paso2">Paso 2</a></li>
+        <li><a data-toggle="tab" href="#paso2">Paso 2</a></li>
         <li><a data-toggle="tab" href="#paso3">Paso 3</a></li>
     </ul>
     <div class="tab-content">
@@ -272,7 +274,7 @@
     {{ parent() }}
     
     <script src="{{ asset('plugins/bootstrap-switch/bootstrap-switch.min.js') }}" type="text/javascript"></script>
-    <script type="text/javascript">$("[name='biblioteca_tegbundle_teg[published]']").bootstrapSwitch();</script>
+
    
     <script src="{{ asset('js/fileinput.js') }}" type="text/javascript"></script>
     <script src="{{ asset('js/fileinput_locale_es.js') }}" type="text/javascript"></script>
@@ -280,5 +282,19 @@
     <script src="{{ asset('js/app/newTeg/newTegModule.js') }}" type="text/javascript"></script>
     <script src="{{ asset('js/app/newTeg/newTegController.js') }}" type="text/javascript"></script>
     <script src="{{ asset('plugins/ngTagsInput/ng-tags-input.min.js') }}" type="text/javascript"></script>
+
+    <script type="text/javascript">$("[name='biblioteca_tegbundle_teg[published]']").bootstrapSwitch();
+$('#biblioteca_tegbundle_teg_capitulos_0_file,#biblioteca_tegbundle_teg_capitulos_1_file,#biblioteca_tegbundle_teg_capitulos_2_file,#biblioteca_tegbundle_teg_capitulos_3_file,#biblioteca_tegbundle_teg_capitulos_4_file').fileinput({
+    language: 'es',
+    uploadUrl: '#',
+    allowedFileExtensions : ['pdf'],
+    showUpload: false/*,
+    initialPreview: [
+            '<img src="/biblioteca2/web/img/logo.jpg" class="file-preview-image" alt="The Moon" title="The Moon">'
+        ],*/
+
+});
+
+    </script>
         
 {% endblock %}
