--- a/src/Biblioteca/UserBundle/Resources/views/menu_backend.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/menu_backend.html.twig
@@ -15,9 +15,9 @@
                     <li class="dropdown">
                         <a href="{{ path('fos_user_registration_register') }}"><i class="fa fa-user-plus fa-fw"></i><span>&nbsp;Añadir usuario</span></a>
                     </li>
-                    <li><a href="#"><i class="fa fa-users fa-lg"></i><span>&nbsp;Listar Usuarios</span></a></li>
+                    <li><a href="{{ path('users') }}"><i class="fa fa-users fa-lg"></i><span>&nbsp;Listar Usuarios</span></a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="#"><i class="fa fa-history fa-fw"></i><span>&nbsp;Historial</span></a></li>
+                    <!-- li><a href="#"><i class="fa fa-history fa-fw"></i><span>&nbsp;Historial</span></a></li -->
                 {% endif %}
                 <li class="dropdown">
                     <a href="{{ path('teg') }}"><i class="fa fa-list fa-lg"></i><span>&nbsp;Listar TEGs</span></a></li>
