Aviso de Js Deshabilitado

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,6 +12,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<noscript>
+        <p class="alert alert-danger">
+            Javascript está deshabilitado en su navegador web. Por favor, para ver correctamente este sitio, <b><i>habilite javascript</i></b>. Para ver las instrucciones para habilitar javascript en su navegador, haga click <a href="http://www.enable-javascript.com/es/" target="_blank">aquí</a>.
+        </p>
+    </noscript>
 		<meta charset="UTF-8" />
 		<title>{% block title %}Bienvenido!{% endblock %}</title>
 		{% block stylesheets %}
