--- a/src/Biblioteca/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
+++ b/src/Biblioteca/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
@@ -3,5 +3,12 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
-<p>{{ 'resetting.password_already_requested'|trans }}</p>
+<div class="panel panel-danger">
+    <div class="panel-heading">
+        <h3 class="panel-title">Recuperacion de contraseña</h3>
+    </div>
+    <div class="panel-body">
+    	<p>{{ 'resetting.password_already_requested'|trans }}</p>
+    </div>
+</div>
 {% endblock fos_user_content %}
