--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -94,22 +94,21 @@
 {% endblock %} 
 
 {% block body %}
-
-    <div ng-controller="newTegController">
-        <h4 class="alert alert-{% if operacion == 0 %}{{'success'}}
-        {% else %}{{'warning'}}{% endif %}"><a class="btn btn-danger" href="{{ path('teg') }}"><i class="fa fa-arrow-left fa-fw"></i>&nbsp;Cancelar</a>&nbsp;{% if operacion == 0 %}{{'Nuevo'}}
-        {% else %}{{'Edición de'}}{% endif %} Trabajo Especial de Grado</h4>
+<div class="panel panel-{% if operacion == 0 %}{{'success'}}{% else %}{{'warning'}}{% endif %}">
+    <div class="panel-heading">
+        <h3 class="panel-title">{% if operacion == 0 %}{{'Nuevo'}}{% else %}{{'Edición de'}}{% endif %} Trabajo Especial de Grado<p style="float: right;"><span style="color:red">(*)</span> Campos Obligatorios</p></h3>
+    </div>
+    <div class="panel-body" ng-controller="newTegController">
         {{ form_start(form, { 'name': 'formInputTeg' }) }}
 
             {{ form_errors(form) }}
-    <ul class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" href="#paso1">Paso 1</a></li>
-        <li><a data-toggle="tab" href="#paso2">Paso 2</a></li>
-        <li><a data-toggle="tab" href="#paso3">Paso 3</a></li>
-    </ul>
+    
     <div class="tab-content">
         <div id="paso1" class="tab-pane fade in active">
-        <p style="float: right;margin: initial;"><span style="color:red">(*)</span> Campos Obligatorios</p>
+            <div class="navbar" style="margin: -15px; margin-bottom: 5px;">
+            <a style="float:left;"class="btn btn-danger" href="{{ path('teg') }}">Cancelar</a>
+            <a style="float:right;" class="btn btn-primary" data-toggle="tab" href="#paso2">Siguiente&nbsp;<i class="fa fa-arrow-right fa-fw"></i></a>
+            </div>
             <div class="form-group col-lg-12">
                 {{ form_label(form.titulo) }}
                 {{ form_errors(form.titulo) }}
@@ -220,6 +219,10 @@
             
         </div>
         <div id="paso2" class="tab-pane fade">
+            <div class="navbar" style="margin: -15px; margin-bottom: 5px;">
+            <a style="float:left;"class="btn btn-default" data-toggle="tab" href="#paso1"><i class="fa fa-arrow-left fa-fw"></i>&nbsp;Volver</a>
+            <a style="float:right;" class="btn btn-primary" data-toggle="tab" href="#paso3">Siguiente&nbsp;<i class="fa fa-arrow-right fa-fw"></i></a>
+            </div>
             <div class="form-group">
                 {{ form_label(form.capitulos) }}
                 {{ form_errors(form.capitulos) }}
@@ -234,6 +237,9 @@
             </div>
         </div>
         <div id="paso3" class="tab-pane fade">
+            <div class="navbar" style="margin: -15px; margin-bottom: 5px;">
+            <a style="float:left;"class="btn btn-default" data-toggle="tab" href="#paso2"><i class="fa fa-arrow-left fa-fw"></i>&nbsp;Volver</a>
+            </div>
             <div class="form-group" >
                 {{ form_label(form.cota) }}
                 {{ form_errors(form.cota) }}
@@ -268,6 +274,7 @@
     {{ form_widget(form._token) }}
     {{ form_end(form, {'render_rest': false} ) }}
     </div>
+</div>
 {% endblock %}
 
 {% block javascripts %}
