--- a/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/new.html.twig
@@ -190,7 +190,7 @@
                     <script type="text/ng-template" id="tagtemplate">
                       <div class="tag-template">
                         <div>
-                          <input type="text" name="[['biblioteca_tegbundle_teg[keyWords]['+$index+'][keyWord]']]" value="[[$getDisplayText()]]" required="required" readonly style="line-height: initial;  background: rgba(255, 255, 255, 0);border: none;width: [[$getDisplayText().length * 8]]px;"/>
+                        	<input type="text" id="[['biblioteca_tegbundle_teg_keyWords_'+$index+'_keyWord']]" name="[['biblioteca_tegbundle_teg[keyWords]['+$index+'][keyWord]']]" value="[[$getDisplayText()]]" required="required" readonly style="line-height: initial;  background: rgba(255, 255, 255, 0);border: none;width: [[$getDisplayText().length * 8]]px;"/>
                           <a class="remove-button" ng-click="$removeTag()">&#10006;</a>
                         </div>
                       </div>
@@ -224,15 +224,30 @@
             <a style="float:right;" class="btn btn-primary" data-toggle="tab" href="#paso3">Siguiente&nbsp;<i class="fa fa-arrow-right fa-fw"></i></a>
             </div>
             <div class="form-group">
-                {{ form_label(form.capitulos) }}
                 {{ form_errors(form.capitulos) }}
-                
+                {{ form_label(form.capitulos) }}
+					 	
                 <div class="row">
+                	<ul class="nav nav-pills col-md-3">
+                		<li class="col-md-12 active"><a href="#cap1" data-toggle="tab">1 <span class="badge" style="background-color: crimson;"!</span></a></li>
+					 	<li class="col-md-12"><a href="#cap2" data-toggle="tab">2</a></li>
+					 	<li class="col-md-12"><a href="#cap3" data-toggle="tab">3</a></li>
+					 	<li class="col-md-12"><a href="#cap4" data-toggle="tab">4</a></li>
+					 	<li class="col-md-12"><a href="#cap5" data-toggle="tab">5</a></li>
+					 </ul>
+                	<div class="tab-content col-md-9">
                         {% for capField in form.capitulos %}
-                                {{ form_errors(capField) }}
-                                {{ form_widget(capField, { 'attr': {'class': 'col-lg-3 col-md-3 col-xs-6', 'ng-model':(capField.vars.id)} }) }}
-                                <h1>{# { capField.vars.value } #}</h1>
+                        <div id="cap{{loop.index}}" class="tab-pane fade {% if loop.first %}in active{% endif %}">
+                        	{% if capField.errors[0].message is defined %}
+				            <span class="help-block">
+				                holsd{{ form_errors(capField) }}
+                            </span>
+				            {% endif %}
+                        	    {{ form_widget(capField, { 'attr': {'ng-model':(capField.vars.id)} }) }}
+                                <h1>xxxxx{{ capField.vars.value }}</h1>
+                        </div>
                         {% endfor %}
+                    </div>
                 </div>
             </div>
         </div>
@@ -290,17 +305,19 @@
     <script src="{{ asset('js/app/newTeg/newTegController.js') }}" type="text/javascript"></script>
     <script src="{{ asset('plugins/ngTagsInput/ng-tags-input.min.js') }}" type="text/javascript"></script>
 
-    <script type="text/javascript">$("[name='biblioteca_tegbundle_teg[published]']").bootstrapSwitch();
-$('#biblioteca_tegbundle_teg_capitulos_0_file,#biblioteca_tegbundle_teg_capitulos_1_file,#biblioteca_tegbundle_teg_capitulos_2_file,#biblioteca_tegbundle_teg_capitulos_3_file,#biblioteca_tegbundle_teg_capitulos_4_file').fileinput({
+    <script type="text/javascript">
+    $("[name='biblioteca_tegbundle_teg[published]']").bootstrapSwitch();
+/*$('#biblioteca_tegbundle_teg_capitulos_0_file,#biblioteca_tegbundle_teg_capitulos_1_file,#biblioteca_tegbundle_teg_capitulos_2_file,#biblioteca_tegbundle_teg_capitulos_3_file,#biblioteca_tegbundle_teg_capitulos_4_file').fileinput({
     language: 'es',
     uploadUrl: '#',
     allowedFileExtensions : ['pdf'],
-    showUpload: false/*,
+    maxFileSize: 10000,
+    showUpload: false*,
     initialPreview: [
             '<img src="/biblioteca2/web/img/logo.jpg" class="file-preview-image" alt="The Moon" title="The Moon">'
-        ],*/
+        ],*
 
-});
+});*/
 
     </script>
         
